# Raytracer

./: .gitignore  CMakeLists.txt
assets/configs/: test.cfg
include/: ASubject.cpp  ASubject.hpp  Hittable.cpp  Hittable.hpp  IObserver.hpp  ISubject.hpp
src/: Main.cpp
src/Application/: Application.cpp  Application.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Colors/: Colors.cpp  Colors.hpp
src/ConfigObserver/: ConfigObserver.cpp  ConfigObserver.hpp
src/ConfigSubject/: ConfigSubject.cpp  ConfigSubject.hpp
src/ConfigUpdater/: ConfigUpdater.cpp  ConfigUpdater.hpp
src/HittableList/: HittableList.cpp  HittableList.hpp
src/Image/: Image.cpp  Image.hpp
src/Interval/: Interval.cpp  Interval.hpp
src/Maths/: Vec3.cpp  Vec3.hpp
src/NamePipe/: NamePipe.cpp  NamePipe.hpp
src/Ray/: Ray.cpp  Ray.hpp
src/Sphere/: Sphere.cpp  Sphere.hpp
